# MSC

./: README.md  mio.md
Ramos/Segundo Semestre/Programación Avanzada/Entregas/Tarea 01/: pa_tarea_01.py
Ramos/Segundo Semestre/Programación Avanzada/Entregas/Tarea 02/: Punto2D.py
Ramos/Segundo Semestre/Programación Avanzada/Entregas/Tarea 04/: TareaBancos.ipynb
Ramos/Segundo Semestre/Programación Avanzada/Entregas/Tarea 05/: PA_U3_Tarea-2.ipynb  PA_U3_Tarea.ipynb  pa_u3_tarea.py  pa_u3_tarea_2.py
Ramos/Segundo Semestre/Programación Avanzada/Entregas/Tarea 06/: tarea6nombre.py
Ramos/Segundo Semestre/Programación Avanzada/Entregas/Tarea 07/: AlgebraLineal.ipynb  Cuatro.mov  Dos.mov  Semana10.ipynb  Semana8parte1.ipynb  Semana8parte2.ipynb  algebralineal.py  archivo.cpp  ejecuta_suma.sh  parallel.py  parallel10.py  parallel2.py  parallel3.py  parallel4.py  parallel5.py  parallel6.py  parallel7.py  parallel8.py  parallel9.py  script.py  semana8parte1.py  semana8parte2.py  suma.py  test.py  test1.py  test2.py  test3.py  test4.py  test4_0.py  test4_1.py  test4_2.py  test4_3.py
Ramos/Segundo Semestre/Programación Avanzada/Unidad 01/Tarea 01/: PA_Tarea_01.ipynb
Ramos/Segundo Semestre/Programación Avanzada/Unidad 01/Tarea 02/: Trabajo2.ipynb  modulo.py  pa_trabajo_2.py
Ramos/Segundo Semestre/Programación Avanzada/Unidad 02/Tarea 03/: pa_u2_tarea.py
Ramos/Segundo Semestre/Programación Avanzada/Unidad 02/Tarea 04/: banklist.xlsx
Ramos/Segundo Semestre/Programación Avanzada/Unidad 03/Tarea 07/: CMakeLists.txt  Presentacion.pptx
(+8 files in other folders)
